Closed
Bug 139369
Opened 23 years ago
Closed 23 years ago
[FIX]Failure on Init of the PostScriptObj will crash
Categories
(Core :: Printing: Output, defect, P1)
Tracking
()
VERIFIED
FIXED
mozilla1.0
People
(Reporter: rods, Assigned: rods)
References
Details
(Keywords: crash, Whiteboard: [adt2] [Needs a=])
Attachments
(1 file, 1 obsolete file)
|
1.39 KB,
patch
|
roland.mainz
:
review+
attinasi
:
superreview+
|
Details | Diff | Splinter Review |
If there is a failure on the Init of nsPostScriptObj.cpp then it will crash on
the call to finalize_translation during the destruction
The failure could be on the creation of the output file or the processing of the
printer command. I was able to reproduce the error at least once.
| Assignee | ||
Comment 1•23 years ago
|
||
The safety checks in finalize_translation is the key to stopping the crash, but
the added ones in end_document are important also.
| Assignee | ||
Updated•23 years ago
|
| Assignee | ||
Updated•23 years ago
|
OS: Windows 2000 → Linux
Target Milestone: --- → mozilla1.0
| Assignee | ||
Updated•23 years ago
|
Summary: Failure on Init od the PostScriptObj will crash → Failure on Init of the PostScriptObj will crash
Comment 2•23 years ago
|
||
nsbeta1+
| Assignee | ||
Updated•23 years ago
|
Summary: Failure on Init of the PostScriptObj will crash → [FIX]Failure on Init of the PostScriptObj will crash
| Assignee | ||
Comment 3•23 years ago
|
||
Same as before but also includes small fix (the actual cause) from Bug 136053
Attachment #80517 -
Attachment is obsolete: true
Comment 4•23 years ago
|
||
Comment on attachment 80570 [details] [diff] [review]
patch
r=Roland.Mainz@informatik.med.uni-giessen.de
Attachment #80570 -
Flags: review+
Comment 5•23 years ago
|
||
Comment on attachment 80570 [details] [diff] [review]
patch
sr=attinasi
Attachment #80570 -
Flags: superreview+
| Assignee | ||
Comment 6•23 years ago
|
||
fixed
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Comment 8•23 years ago
|
||
adt1.0.0+ (on ADT's behalf) approval fo checkin to the 1.0 branch. Pls check
this in today after you receive Drivers approval, then add fixed1.0.0 keyword.
You need to log in
before you can comment on or make changes to this bug.
Description
•