making sure end_document can be called correctly without crashing several safety checks Bug 139369  r=dcone,roland sr=attinasi